tests/sealed/sealed.exp
Error: proto.js:3
  3: var x:number = o.x;
                    ^^^ Cannot assign `o.x` to `x` because string [1] is incompatible with number [2].
  References:
    8: o.x = "...";
             ^^^^^ [1]: string
    3: var x:number = o.x;
             ^^^^^^ [2]: number

Error: proto.js:7
  7: var y:number = o.m();
                    ^^^^^ Cannot assign `o.m()` to `y` because boolean [1] is incompatible with number [2].
  References:
   10: Foo.prototype = { m: function() { return false; } }
                                                ^^^^^ [1]: boolean
    7: var y:number = o.m();
             ^^^^^^ [2]: number

Error: proto.js:7
  7: var y:number = o.m();
                    ^^^^^ Cannot assign `o.m()` to `y` because string [1] is incompatible with number [2].
  References:
    8: o.x = "...";
             ^^^^^ [1]: string
    7: var y:number = o.m();
             ^^^^^^ [2]: number

Error: sealed.js:3
  3: o.z = 0;
       ^ property `z`. Property not found in
  3: o.z = 0;
     ^ object type

Error: sealed.js:8
  8: a.x = 123;
       ^ property `x`. Property not found in
  8: a.x = 123;
     ^ new object

Error: sealed.js:9
  9: a.y = 'abc'; // error, needs to be declared in Bar's constructor
       ^ property `y`. Property not found in
  9: a.y = 'abc'; // error, needs to be declared in Bar's constructor
     ^ new object


Found 6 errors
